Agregamos el archivo README y algunos fonts

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
     <head>
         <meta charset="utf-8">
         <title>Santiago Sánchez</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="shortcut icon" href="" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="name">
-            <h1 class="firstname">SANTIAGO</h1>
+            <h1 class="firstname">SANTIAGO SANCHEZ</h1>
         </div>
     <footer>
         <div class="links">
             <a href="https://www.linkedin.com/in/santiagosanchezhernandez/">Linkedin</a>
-            <a href="https://twitter.com/jesuis_san">Twitter</a>
-            <a href="https://github.com/jesuis-san">GitHub</a>
-            <a href="https://medium.com/jesuis_san">Blog</a>
-            <a href="about.html">Sobre m&iacute;</a>
-            <a href="">Ag&eacute;ndate</a>
+            <a href="https://twitter.com/1santish">Twitter</a>
+            <a href="https://github.com/1santish">GitHub</a>
+            <a href="https://medium.com/1santish">Blog</a>
+            <a href="about.html">Sobre mí</a>
+            <a href="">Agéndate</a>
         </div>
     </footer>
     </body>
