--- a/about.html
+++ b/about.html
@@ -1,16 +1,21 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>San</title>
-        <link rel="stylesheet" href="about.css">
+        <title>Santiago Sánchez</title>
+        <link rel="shortcut icon" href="" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="about.css">
     </head>
     <body>
         <div>
+            <a href="index.html"><img class="imagesan" src=""/></a>
+        </div>
+        <div>
             <h2 class="greeting">Hola, soy San 👀</h2>
             <h2 class="description">Soy un diseñador y desarrollador legal.</h2>
+            <h1 class="message">"Diseño y desarrollo artefactos legales simples que mejora la experiencia de las personas."</h1>
         </div>
         <div id="aboutmecontainer">
             <div id="aboutmedescription">
