Se agregan algunas etiquetas meta

--- a/about.html
+++ b/about.html
@@ -1,34 +1,36 @@
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
+        <meta name="description" content="Santiago Sánchez es abogado, diseñador y Full StacK Developer. Especialista en FinTech y protección de datos.">
+        <meta name="robots" content="about,follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Santiago Sánchez</title>
-        <link rel="shortcut icon" href="" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="about.css">
     </head>
     <body>
-        <div>
-            <a href="index.html"><img class="imagesan" src=""/></a>
-        </div>
-        <div>
+        <section>
+            <a href="index.html" class="avocado"> 🥑 </a>
+        </section>
+        <section>
             <h2 class="greeting">Hola, soy San 👀</h2>
             <h2 class="description">Soy un diseñador y desarrollador legal.</h2>
             <h1 class="message">"Diseño y desarrollo artefactos legales simples que mejora la experiencia de las personas."</h1>
-        </div>
-        <div id="aboutmecontainer">
-            <div id="aboutmedescription">
+        </section>
+        <section id="aboutmecontainer">
+            <article id="aboutmedescription">
                 <h2 class="titleaboutme">Sobre mí</h2>
-                <div class="dividerLine"></div>
+                <article class="dividerLine"></article>
                 <p class="aboutmetext">
                     pass
                 </p>
-            </div>
-            <div id="aboutmeprojects">
+            </article>
+            <article id="aboutmeprojects">
                 <h3>Proyecto 1</h3>
                 <p>Proyecto</p>
-            </div>
-        </div>
+            </article>
+        </section>
     </body>
 </html>
