--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Santiago Sánchez</title>
-        <link rel="shortcut icon" href="" type="image/x-icon">
+        <meta charset="UTF-8">
+        <meta name="description" content="Santiago Sánchez es abogado, diseñador y Full StacK Developer. Especialista en FinTech y protección de datos.">
+        <meta name="robots" content="index,follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div class="name">
+        <section class="name">
             <h1 class="firstname">SANTIAGO SANCHEZ</h1>
-        </div>
+        </section>
     <footer>
-        <div class="links">
+        <section class="links">
             <a href="https://www.linkedin.com/in/santiagosanchezhernandez/">Linkedin</a>
             <a href="https://twitter.com/1santish">Twitter</a>
             <a href="https://github.com/1santish">GitHub</a>
             <a href="https://medium.com/1santish">Blog</a>
             <a href="about.html">Sobre mí</a>
             <a href="">Agéndate</a>
-        </div>
+        </section>
     </footer>
     </body>
 </html>
