--- a/about.html
+++ b/about.html
@@ -1,36 +1,68 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="Santiago Sánchez es abogado, diseñador y Full StacK Developer. Especialista en FinTech y protección de datos.">
-        <meta name="robots" content="about,follow">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Santiago Sánchez</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="about.css">
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Santiago Sánchez es abogado, diseñador y Full StacK Developer. Especialista en FinTech y protección de datos.">
+    <meta name="robots" content="index,follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./about.css">
+    <title>Santiago Sánchez</title>
+</head>
+<body>
+     <main>
         <section>
-            <a href="index.html" class="avocado"> 🥑 </a>
-        </section>
-        <section>
-            <h2 class="greeting">Hola, soy San 👀</h2>
-            <h2 class="description">Soy un diseñador y desarrollador legal.</h2>
-            <h1 class="message">"Diseño y desarrollo artefactos legales simples que mejora la experiencia de las personas."</h1>
-        </section>
-        <section id="aboutmecontainer">
-            <article id="aboutmedescription">
-                <h2 class="titleaboutme">Sobre mí</h2>
-                <article class="dividerLine"></article>
-                <p class="aboutmetext">
-                    pass
-                </p>
-            </article>
-            <article id="aboutmeprojects">
-                <h3>Proyecto 1</h3>
-                <p>Proyecto</p>
+            <figure class="figure-santiagosphoto">
+                <img class="santiagosphoto" src="./imgs/Santiago's photo.jpg" alt="santiago's photo"/>
+            </figure>
+            <h1 class="main-name">Santiago Sánchez (San 👀)</h1>
+            <article class="headline">
+                <h3>Legal Designer | Legal Developer | No-code maker | FinTech | Data | PI | 🍎</h3>
             </article>
         </section>
-    </body>
+        <section>
+            <nav>
+                <ul class="main-nav">
+                    <li class="main-nav__item"><a href="https://linkedin.com/in/santiagosancher">Linkedin</a></li>
+                    <li class="main-nav__item"><a href="https://twitter.com/santiagosancher">Twitter</a></li>
+                    <li class="main-nav__item"><a href="https://github.com/santiagosancher">GitHub</a></li>
+                    <li class="main-nav__item"><a href="https://medium.com/@ßsantiagosancher">Blog</a></li>
+                    <li class="main-nav__item"><a href="#">Habla conmigo</a></li>
+                </ul>
+            </nav>
+        </section>
+        <h1 class="projects">Últimos proyectos</h1>
+        <section>
+            <article class="project-itemone">
+                <div>
+                    <h2 class="one-itemone">Dorada +</h2>
+                    <p class="one-itemtwo">Un proyecto de ciudad inteligente. Aprovechando la tecnología para transformar el comportamiento de las personas, los negocios y el gobierno del Municipio de la Dorada, Caldas.</p>
+                </div>
+                <figure>
+                    <img src="./imgs/Dorada +.png" alt="sreenshot página dorada+" class="imagendoradamas">
+                </figure>
+            </article>
+        </section>
+        <h1 class="books">Libros favoritos 📚</h1>
+        <section class="books-list">
+            <article class="book-item">
+                <iframe type="text/html" sandbox="allow-scripts allow-same-origin allow-popups" width="186" height="400" frameborder="0" allowfullscreen style="max-width:100%" src="https://read.amazon.com/kp/card?asin=B00KYZ7GB2&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_57S6YHBDBHGERRN56N14" ></iframe>
+            </article>
+            <article class="book-item">
+                <iframe type="text/html" sandbox="allow-scripts allow-same-origin allow-popups" width="186" height="400" frameborder="0" allowfullscreen style="max-width:100%" src="https://read.amazon.com/kp/card?asin=B077Y89TV1&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_86T2E5GM4P90J87R8WR4" ></iframe>
+            </article>
+            <article class="book-item">
+                <iframe type="text/html" sandbox="allow-scripts allow-same-origin allow-popups" width="186" height="400" frameborder="0" allowfullscreen style="max-width:100%" src="https://read.amazon.com/kp/card?asin=B00BL7RJC8&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_DNDHXCFJV5EJYM4XP7MQ" ></iframe>
+            </article>
+        </section>
+     </main>
+     <footer>
+        <form action="">
+            <label for=""></label>
+        </form>
+     </footer>
+</body>
 </html>
