--- a/about.html
+++ b/about.html
@@ -29,10 +29,15 @@
                     <li class="main-nav__item"><a href="https://linkedin.com/in/santiagosancher">Linkedin</a></li>
                     <li class="main-nav__item"><a href="https://twitter.com/santiagosancher">Twitter</a></li>
                     <li class="main-nav__item"><a href="https://github.com/santiagosancher">GitHub</a></li>
-                    <li class="main-nav__item"><a href="https://medium.com/@ßsantiagosancher">Blog</a></li>
+                    <li class="main-nav__item"><a href="https://medium.com/@santiagosancher">Blog</a></li>
                     <li class="main-nav__item"><a href="#">Habla conmigo</a></li>
                 </ul>
             </nav>
+        </section>
+        <h1 class="aboutme">Sobre mí</h1>    
+        <section>
+            <p class="aboutme-description">Soy un diseñador y desarrollador legal que adopta una mentalidad de principiante para mantenerse abierto, curioso, y ver la ambigüedad como una oportunidad para fracasar rápido y frecuente. Priorizo el entendimiento del modelo de negocio y el enamoramiento del problema con el fin de identificar la estructura jurídica aplicable.</p>
+            <p class="aboutme-description">Mi marco de trabajo se rige por cinco principios: intersección de modelos mentales, comprender el modelo de negocio para identificar el marco regulatorio, diseñar artefactos legales inteligentes, funcionales y transparentes, prototipar para fracasar rápido y mejorar más rápido, y ser un abogado habilitador de la innovación.</p>
         </section>
         <h1 class="projects">Últimos proyectos</h1>
         <section>
